SW-7868 Fixed: Alignment of the prices

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/checkout.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/checkout.less
@@ -6,6 +6,9 @@
 
 .product--table {
 
+    .is--no-star {
+        .unitize(-6, 16, margin-left);
+    }
 	.panel {
 		border: 0 none;
 	}
@@ -48,6 +51,9 @@
 		width: 100%;
 		height: 100%;
 	}
+    .row--voucher {
+        .unitize-height(130);
+    }
 
 	.product--delivery,
 	.table--media,
@@ -289,6 +295,8 @@
 	.product--table {
 		.unitize-margin(50, 0, 50, 0);
 
+        .row--voucher { height: 100%; }
+
 		.panel--body {
 			border: 1px solid @borderColor;
 		}
@@ -383,10 +391,13 @@
 			margin-left: 3%;
 		}
 
-		.row--premium-product .column--total-price,
+        .row--premium-product .column--total-price {
+            margin-left: 16.5%;
+        }
+
 		.row--rebate .column--total-price,
 		.row--voucher .column--total-price {
-			margin-left: 16.5%;
+			margin-left: 26.5%;
 		}
 
 		// Footer
